modif menu deroulant connexion rapide

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -67,10 +67,10 @@
           <select id="quickLogin" class="block w-full py-3 px-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition bg-gray-50">
             <option value="">-- Sélectionner un utilisateur --</option>
             <option value="admin@univ.fr|password123">Admin</option>
-            <option value="etudiant@univ.fr|password123">Étudiant</option>
+            <option value="mouad@univ.fr|mouadmouad">Étudiant</option>
             <option value="professeur@univ.fr|password123">Enseignant</option>
             <option value="secretaire@univ.fr|password123">Secrétaire</option>
-            <option value="rh@innotech.com|password123!">Entreprise</option>
+            <option value="contact@innovatech.io|password123">Entreprise</option>
           </select>
         </div>
 
