--- a/frontend/gestion-etudiants.html
+++ b/frontend/gestion-etudiants.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <title>Gestion étudiants - Secrétaire - Candidapp</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -30,9 +31,18 @@
     }
   </script>
   <style>
-    .gradient-bg { background: linear-gradient(135deg,#4f46e5 0%,#7c3aed 50%,#a855f7 100%); }
-    .card-hover { transition: transform .3s ease, box-shadow .3s ease; }
-    .card-hover:hover { transform: translateY(-3px); box-shadow: 0 10px 30px rgba(0,0,0,.1); }
+    .gradient-bg {
+      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 50%, #a855f7 100%);
+    }
+
+    .card-hover {
+      transition: transform .3s ease, box-shadow .3s ease;
+    }
+
+    .card-hover:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, .1);
+    }
   </style>
 </head>
 
@@ -51,19 +61,23 @@
             </svg>
           </div>
           <span class="text-xl font-bold text-gray-900">Candidapp</span>
-          <span class="hidden sm:inline-block text-xs bg-primary-100 text-primary-700 px-2 py-0.5 rounded-full font-medium">Secrétariat</span>
+          <span
+            class="hidden sm:inline-block text-xs bg-primary-100 text-primary-700 px-2 py-0.5 rounded-full font-medium">Secrétariat</span>
         </a>
 
         <!-- Navigation Links -->
         <div class="hidden md:flex items-center space-x-6">
-          <a id="nav-dashboard" href="/secretaire/dashboard" class="text-gray-600 hover:text-primary-600 transition">Tableau de bord</a>
-          <a id="nav-etudiants" href="/secretaire/etudiants" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Gestion étudiants</a>
-          <a id="nav-rc" href="/secretaire/validation-rc" class="text-gray-600 hover:text-primary-600 transition flex items-center space-x-1">
+          <a id="nav-dashboard" href="/secretaire/dashboard"
+            class="text-gray-600 hover:text-primary-600 transition">Tableau de bord</a>
+          <a id="nav-etudiants" href="/secretaire/etudiants"
+            class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Gestion étudiants</a>
+          <a id="nav-rc" href="/secretaire/validation-rc"
+            class="text-gray-600 hover:text-primary-600 transition flex items-center space-x-1">
             <span>Validation RC</span>
             <span id="menuBadgeRC" class="bg-red-500 text-white text-xs px-2 py-0.5 rounded-full hidden"></span>
           </a>
           <a id="nav-offres" href="/offres" class="text-gray-600 hover:text-primary-600 transition">Offres</a>
-          <a id="nav-profil" href="/secretaire/profil" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
+
         </div>
 
         <!-- User Menu -->
@@ -83,10 +97,11 @@
             </div>
             <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
           </div>
-          <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+          <button id="logoutBtn"
+            class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
             </svg>
             <span class="hidden sm:inline">Déconnexion</span>
           </button>
@@ -125,32 +140,38 @@
         <form id="createForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Nom *</label>
-            <input id="nom" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="nom"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Prénom *</label>
-            <input id="prenom" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="prenom"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Email *</label>
-            <input id="email" type="email" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="email" type="email"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Mot de passe *</label>
-            <input id="password" type="password" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="password" type="password"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Formation *</label>
-            <input id="formation" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="formation"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Promo</label>
-            <input id="promo" placeholder="ex: 2026" class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+            <input id="promo" placeholder="ex: 2026"
+              class="w-full rounded-lg border border-gray-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-primary-200" />
           </div>
 
           <div class="md:col-span-2 flex items-center justify-end gap-3 pt-2">
@@ -384,7 +405,7 @@
     }
 
     function clearForm() {
-      ["nom","prenom","email","password","formation","promo"].forEach(id => document.getElementById(id).value = "");
+      ["nom", "prenom", "email", "password", "formation", "promo"].forEach(id => document.getElementById(id).value = "");
     }
 
     // ==================== UI HELPERS ====================
@@ -412,4 +433,5 @@
   </script>
   <script src="/js/auth.js"></script>
 </body>
+
 </html>
